"CleanArch.Infra.Data" project added, "CleanArch.API" and "CleanArch.Domain" projects updated

--- a/CleanArch/CleanArch.API/appsettings.json
+++ b/CleanArch/CleanArch.API/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "ChannelDBConnection": "Server=.;Database=ChannelDB;Trusted_Connection=True;MultipleActiveResultSets=true;"
+  }
 }
